--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.0",
     "morgan": "^1.10.0",
     "request": "^2.88.2"
   },
